# exchange

./: .clang-format  .clang-tidy  .gitignore  .lsan-suppressions  AGENTS.md  CMakeLists.txt  README.md  TODO.md  ci-check.sh  config.toml
.github/hooks/: auto-format-cpp.json
.github/hooks/scripts/: auto-format-cpp.py
.github/skills/cpp-latency-review/: SKILL.md
.github/workflows/: ci.yml
cmake/: fixup_gperf.sh
src/: CMakeLists.txt  main.cpp
src/lib/: calculator.cpp  calculator.h
src/lib/book/: book.cpp  book.h  definitions.h  engine.cpp  engine.h  md.h  request.h
src/lib/exchange/: asset_translator.hpp  book.cpp  book.h  constants.h  definitions.h  engine.cpp  engine.h  err.h  md.h  metric_registry.h  order.h  orders_at_price.h  request.h  tickers.gperf  user_mgr.h  user_orders.h
src/lib/exchange/fix/: config.h  fix_gateway.cpp  fix_gateway.hpp  fix_helpers.hpp  fix_session.cpp  fix_session.hpp  sessions.hpp
src/lib/main/: config.h
src/lib/utils/: buffer.h  die.h  linked_list.h  log.h  mem.h  metrics.h  metrics_server.h  profiler.h  queue.h  short_string.h  thread.h  thread_utils.h  time.h
tests/: CMakeLists.txt  test_book.cpp  test_buffer.cpp  test_calculator.cpp  test_config.cpp  test_fix_helpers.cpp  test_log.cpp  test_mempool.cpp  test_metrics.cpp  test_orders_at_price.cpp  test_queue.cpp  test_short_string.cpp  test_thread.cpp  test_time.cpp  test_user_orders.cpp
